--- a/atividade pratica 2/lib/css/conteudo.css
+++ b/atividade pratica 2/lib/css/conteudo.css
@@ -1,12 +1,14 @@
 .opt-group {
-  border: 1px solid; }
+  border: 1px solid;
+  text-align: center;
+  margin-left: 20px;
+  margin-right: 20px; }
   .opt-group h3 {
-    text-align: center;
     font-weight: bold; }
 
 .option-border, .correct, .incorrect, .selected {
-  border: 3px solid;
-  border-radius: 3px;
+  border: 5px solid;
+  border-radius: 10px;
   font-weight: bold;
   background-color: #BFBFBF;
   border-color: #BFBFBF; }
