--- a/atividade pratica 2/lib/sass/conteudo.scss
+++ b/atividade pratica 2/lib/sass/conteudo.scss
@@ -2,8 +2,9 @@
 
 $jumbo-font-size: 36px;
 
-
 .jumbotron{
+    background-color: #FFBF7F;
+    color: #000000;
     h2{
         font-size: $jumbo-font-size;
         font-weight: bold;
