--- a/atividade pratica 2/lib/css/conteudo.css
+++ b/atividade pratica 2/lib/css/conteudo.css
@@ -2,14 +2,26 @@
   border: 1px solid;
   text-align: center;
   margin-left: 20px;
-  margin-right: 20px; }
+  margin-right: 20px;
+  border-radius: 10px;
+  color: #000000; }
+  .opt-group h2 {
+    margin-top: 10px;
+    margin-bottom: 10px;
+    font-weight: bold;
+    background-color: #7FBFFF;
+    border-color: #7FBFFF; }
   .opt-group h3 {
-    font-weight: bold; }
+    margin-top: 10px;
+    margin-bottom: 10px;
+    background-color: #7FBFFF;
+    border-color: #7FBFFF; }
 
 .option-border, .correct, .incorrect, .selected {
   border: 5px solid;
   border-radius: 10px;
   font-weight: bold;
+  color: #000000;
   background-color: #BFBFBF;
   border-color: #BFBFBF; }
   .option-border img, .correct img, .incorrect img, .selected img {
@@ -27,8 +39,11 @@
   background-color: #FFFF3F;
   border-color: #FFFF3F; }
 
-.jumbotron h2 {
-  font-size: 36px;
-  font-weight: bold; }
+.jumbotron {
+  background-color: #FFBF7F;
+  color: #000000; }
+  .jumbotron h2 {
+    font-size: 36px;
+    font-weight: bold; }
 
 /*# sourceMappingURL=conteudo.css.map */
